--- a/mon-cv-formations.html
+++ b/mon-cv-formations.html
@@ -2,7 +2,7 @@
 
 <html lang="fr"></html>
 
-<div class="Box">
+<div class="Box-header">
   <head>
     <link rel="stylesheet" href="mon-cv.css">
     <title>CV Feist Loris- Formations </title>
@@ -20,8 +20,8 @@
             <li><a href="mon-cv-experiences.html">Expériences</a></li>
             <li><a href="mon-cv-formations.html">Formations</a></li>
           </ul>
-
-<p></h3> <b>Formations :</b></h3> </p> 
+    <div class="Box-central">
+        <div class="Box-info">
     <p>
         <li> 2019-2024 <br>
             <i> Master ISEG Strasbourg </i> 
@@ -43,14 +43,22 @@
             <i> Baccalauréat Général ES  - Mention assez-bien </i>
 
     </p>
-
-    <footer>
-        <b> Téléphone :</b> +33766799607 <b>Mail:</b> loris.feist@iseg.fr 
-        <div class="RS2">
-          <b> Linkedin : </b> in/loris-feist/
-      </div>
-    </footer>
+</div>
+<br>
+<br>
 
 </div>
+<footer>
+<div class="Box-rs">
+<b> Téléphone :</b> +33766799607 <b>Mail:</b> loris.feist@iseg.fr 
+<div class="RS2">
+  <b> Linkedin : </b> in/loris-feist/
+</div>
+</div>
+</div>
+    
+</footer>
+</div>
+</body>
 
 </html>
