--- a/mon-cv.html
+++ b/mon-cv.html
@@ -15,14 +15,12 @@
       <div class="titre">
         <h1> Loris Feist </h1> <h2>Recherche stage Community Manager</h2> </div>
       </header>
-
+      <div class="Navigation"> <h2>Navigation</h2> </div>
 <ul class="liste">
   <li><a href="mon-cv.html">Accueil</a></li>
-  <li><a href="mon-cv-expériences.html">Expériences</a></li>
+  <li><a href="mon-cv-experiences.html">Expériences</a></li>
 <li><a href="mon-cv-formations.html">Formations</a></li>
 </ul>
-
-<div class="profil"></div>
 
 <main> 
     <section> 
